--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
 version: "3.2"
 services:
-  tiled:
-    image: ghcr.io/bluesky/tiled:v0.1.0b10
+  tiled-base:
+    container_name: tiled-base
+    # image: ghcr.io/bluesky/tiled:v0.1.0b10
+    image: tiled:local
+    platform: linux/arm64
+    build:
+      context: "."  # Local repo directory
+      platforms:
+        - linux/arm64
+      tags:
+        - tiled:local
     environment:
       - TILED_SINGLE_USER_API_KEY=${TILED_SINGLE_USER_API_KEY}
     ports:
-      - 8000:8000
+      - 127.0.0.1:8080:8000
     restart: unless-stopped
 
   # Below we additionally configure monitoring with Prometheus and Grafana.
